--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -5,32 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %} | EMPLinks</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet">
 </head>
-<body>
-    <nav class="p-6 flex items-center justify-between bg-teal-700">
-        <a href="{% url 'home' %}" class="text-2xl text-white font-bold">EMPLinks</a>
-
-        <div class="space-x-4">
-            <a href={%url 'about'%} class="text-white">About</a>
-            <a href="#" class="text-white">Links</a>
-            <a href="#" class="text-white">Category</a>
-
-            {% if user.is_authenticated %}
-            <a href="{% url 'logout' %}" class="bg-red-600 text-white rounded-xl px-4 py-2">Logout</a>
-            {% else %}
-            <a href="{% url 'register' %}" class="bg-cyan-600 text-white rounded-xl px-4 py-2">Register</a>
-            <a href="{% url 'login' %}" class="bg-cyan-600 text-white rounded-xl px-4 py-2">Login</a>
-            {% endif %}
-        </div>
-    </nav>
+<body class="font-sans">
+    {% include 'core/partials/nav.html' %}
 
     <main>
         {% block content %}
         {% endblock %}
     </main>
-
+    
     <footer class="bg-gray-200 py-4 text-center">
         &copy; 2024 empchief. All rights reserved.
     </footer>
+    
+
+    <script>
+        const menuToggle = document.getElementById('menu-toggle');
+        const menu = document.getElementById('menu');
+
+        menuToggle.addEventListener('click', () => {
+            menu.classList.toggle('hidden');
+        });
+    </script>
 </body>
 </html>
