Update about.html and base.html templates

--- a/core/templates/core/partials/nav.html
+++ b/core/templates/core/partials/nav.html
@@ -1,6 +1,6 @@
-<nav class="bg-teal-700">
+<nav class="bg-teal-700 py-6">
     <div class="container mx-auto px-4">
-        <div class="flex items-center justify-between py-4">
+        <div class="flex items-center justify-between">
             <div class="flex items-center">
                 <a href="{% url 'home' %}" class="text-white font-bold">
                     <span class="text-2xl">EMPLinks</span>
