--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -16,9 +16,19 @@
         {% endblock %}
     </main>
     
-    <footer class="bg-gray-200 py-4 text-center">
-        &copy; 2024 empchief. All rights reserved.
+    <footer class="bg-teal-700 py-6 text-white text-center">
+        <div class="container mx-auto">
+            <p class="text-lg mb-2">&copy; 2024 EMPLinks. All rights reserved.</p>
+            <p class="text-sm">Stay connected with us:</p>
+            <div class="flex justify-center mt-2">
+                <a href="#" class="text-xl mx-2 hover:text-cyan-400"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="text-xl mx-2 hover:text-cyan-400"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="text-xl mx-2 hover:text-cyan-400"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
     </footer>
+    
+
     
 
     <script>
