--- a/core/templates/core/partials/nav.html
+++ b/core/templates/core/partials/nav.html
@@ -17,8 +17,9 @@
 
             <div class="hidden sm:flex items-center space-x-4 text-lg">
                 {% if user.is_authenticated %}
+                    <a href="{% url 'dashboard' %}" class="text-white bg-blue-700 hover:bg-blue-800 transition-colors duration-300 ease-in rounded-xl">Dashboard</a>
                     <a href="{% url 'links' %}" class="text-white bg-cyan-700 hover:bg-cyan-800 transition-colors duration-300 ease-in rounded-xl">Links</a>
-                    <a href="/" class="text-white bg-yellow-700 hover:bg-yellow-800 transition-colors duration-300 ease-in rounded-xl">Categories</a>
+                    <a href="{% url 'catagories' %}" class="text-white bg-yellow-700 hover:bg-yellow-800 transition-colors duration-300 ease-in rounded-xl">Categories</a>
                     <a href="{% url 'create-link' %}" class="text-white bg-purple-700 hover:bg-purple-800 transition-colors duration-300 ease-in rounded-xl">Create Link</a>
                     <a href="{% url 'create-category' %}" class="text-white bg-indigo-700 hover:bg-indigo-800 transition-colors duration-300 ease-in rounded-xl">Create Category</a>
                     <a href="{% url 'logout' %}" class="text-white bg-red-700 hover:bg-red-800 transition-colors duration-300 ease-in rounded-xl">Logout</a>
@@ -36,8 +37,9 @@
                 <a href="{% url 'about' %}" class="block text-white cursor-pointer">About</a>
 
                 {% if user.is_authenticated %}
+                    <a href="{% url 'dashboard' %}" class="block text-white">Dashboard</a>
                     <a href="{% url 'links' %}" class="block text-white">Links</a>
-                    <a href="/" class="block text-white">Categories</a>
+                    <a href="{% url 'catagories' %}" class="block text-white">Categories</a>
                     <a href="{% url 'create-link' %}" class="block text-white">Create Link</a>
                     <a href="{% url 'create-category' %}" class="block text-white">Create Category</a>
                     <a href="{% url 'logout' %}" class="block text-white">Logout</a>
