--- a/links/templates/links/links.html
+++ b/links/templates/links/links.html
@@ -3,12 +3,20 @@
 {% block title %}Links{% endblock %}
 
 {% block content %}
-<div class="container mx-auto py-8">
-    <h1 class="text-4xl font-bold mb-8 hover:text-blue-700 transition-colors ease-in">Links</h1>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
-        {% for link in links %}
-        {% include 'links/partials/linking.html' %}
-        {% endfor %}
+<div class="container mx-auto py-4 flex flex-col sm:flex-row">
+
+    {%include 'links/partials/query.html'%}
+
+    <div class="w-full sm:w-3/4">
+        <h1 class="text-2xl sm:text-4xl font-bold mb-4 text-center">Links</h1>
+        <div class="text-center mb-8">
+            <a href="{% url 'create-link' %}" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full transition-transform transform hover:scale-105 ease-in">Create Link</a>
+        </div>
+        <div class="grid grid-cols-1 gap-4">
+            {% for link in links %}
+            {% include 'links/partials/linking.html' %}
+            {% endfor %}
+        </div>
     </div>
 </div>
 
@@ -18,5 +26,5 @@
     </a>
 </div>
 
-{%include 'links/partials/scripts.html'%}
+{% include 'links/partials/scripts.html' %}
 {% endblock %}
