--- a/links/templates/links/create_category.html
+++ b/links/templates/links/create_category.html
@@ -1,6 +1,6 @@
 {% extends 'core/base.html' %}
 
-{% block title %}Create Category{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block content %}
 <div class="min-h-screen flex items-center justify-center">
