--- a/links/templates/links/create_link.html
+++ b/links/templates/links/create_link.html
@@ -1,6 +1,6 @@
 {% extends 'core/base.html' %}
 
-{% block title %}Create Link{% endblock %}
+{% block title %}{{title}}{% endblock %}
 
 {% block content %}
 <div class="mt-8 min-h-screen flex items-center justify-center">
