--- a/links/templates/links/create_link.html
+++ b/links/templates/links/create_link.html
@@ -1,6 +1,6 @@
 {% extends 'core/base.html' %}
 
-{% block title %}{{title}}{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block content %}
 <div class="mt-8 min-h-screen flex items-center justify-center">
@@ -12,11 +12,25 @@
                 You have reached the top of your plan!
             </div>
         {% else %}
-            <form method="post" action=".">
+            <form method="post" action="." id="linkForm">
                 {% csrf_token %}
-                {%include 'links/partials/links_form.html' %}
+                {% include 'links/partials/links_form.html' %}
             </form>
         {% endif %}
     </div>
 </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var urlInput = document.getElementById('id_url');
+        var nameInput = document.getElementById('id_name');
+
+        urlInput.addEventListener('input', function () {
+            if (nameInput.value.trim() === '') {
+                nameInput.value = urlInput.value;
+            }
+        });
+    });
+</script>
+
 {% endblock %}
